# imaging

./: .gitignore  CMakeLists.txt
images/ppm/: checker_p4.pbm  gradient_p5.pgm  gray_p2.pgm
include/: filters.h  image.h  operations.h
src/: CMakeLists.txt  filters.cpp  image.cpp  main.cpp  operations.cpp
tests/: CMakeLists.txt  ut_image.cpp  ut_operations.cpp
